--- a/app/src/main/assets/sample.html
+++ b/app/src/main/assets/sample.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ready Story</title>
+    <title>Camera Story</title>
 </head>
 <body>
-<javascript>
-    document.write(5 + 6);
-</javascript>
-<h1 id="sample-title">Sample for the injected local js file.</h1>
+<h1 id="sample-title">Sample for camera image add.</h1>
+<button onclick="fileUpload()">파일 업로드</button>
 <script type="text/javascript">
     function log(msg) {
       	Android.log(msg);
       }
 
-     function call() {
+     function setImage(imgPath) {
         const img = document.createElement("img");
-        img.src = "https://picsum.photos/200/301";
+        img.src = imgPath;
+        img.id = imgPath;
+        img.style.width = "200px";
+        img.style.height  = "100px"
+        img.addEventListener("click", imgDelete);
         document.body.appendChild(img);
       }
 
-     function setImage(imgPath) {
-      Android.log("fsdfsdfsdfsd");
-        const img = document.createElement("img");
-        img.src = imgPath;
-        img.style.width = "200px";
-        img.style.height  = "100px"
-        document.body.appendChild(img);
-      }
+    function imgDelete(e) {
+        if (confirm("사진을 삭제 하시겠습니까?")) {
+            const element = document.getElementById(e.target.id);
+            var param = {"filePath":e.target.id}
+            callAndroidAsync('imgDelete',param).then(function(value) {
+                const obj = JSON.parse(value);
+                if (obj.rescode == true) {
+                    element.remove();
+                    alert(obj.resmsg)
+                }
+                console.log(value)
+            }, function(reason) {
+                console.log(reason)
+            });
+        }
+    }
+
+    function fileUpload(){
+        var param = {"zipFileName": "imgZip_0001.zip"}
+            callAndroidAsync('fileUpload',param).then(function(value) {
+                const obj = JSON.parse(value);
+                if (obj.rescode == true) {
+                    alert(obj.resmsg)
+                }
+                console.log(value)
+            }, function(reason) {
+                console.log(reason)
+            });
+    }
+    async function callAndroidAsync(javaFuncName, params) {
+        const rand = 'asyncJava_' + Math.floor(Math.random() * 1000000)
+        window[rand] = {}
+
+        // func called from android
+        window[rand].callback = (isSuccess) => {
+            const dataOrErr = Android.runAsyncResult(rand)
+            if (isSuccess) window[rand].resolve(dataOrErr)
+            else window[rand].reject(dataOrErr)
+            delete window[rand] // clean up
+        }
+
+        // call some android function that returns immediately - should run in a new thread
+        // setTimeout(() => window[rand].callback(false, params.val * 2), 4000) // see testCallJavaAsync
+        Android.runAsync(rand, javaFuncName, JSON.stringify(params))
+
+        return new Promise((resolve, reject) => {
+            window[rand].resolve = (data) => resolve(data)
+            window[rand].reject = (err) => reject(err)
+        })
+}
+
+
 </script>
-<p id="cn"> Simple label showing the html page is loaded </p>
-<!--<input type="button" value="Say hello" onClick="call()"/>-->
-<div id="pano"></div>
 </body>
 </html>
